jenkins-gradle-ci-master/istio/mtls.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "default"
  namespace: "coffeeandit"
spec:
  mtls:
    mode: STRICT
