jenkins-gradle-ci-master/istio/destionation-rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: jenkins-gradle-ci
spec:
  host: jenkins-gradle-ci.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 8080
        loadBalancer:
          simple: ROUND_ROBIN
