jenkins-gradle-ci-master/istio/sidecar.yml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: default
  namespace: coffeeandit
spec:
  egress:
    - hosts:
        - "coffeeandit/jenkins-gradle-ci.svc.cluster.local"
